<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synapse (Lite)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_enable_text_marquee">Display text marquee</string>
    <string name="pref_sum_endable_text_marquee">Setting text marquee display</string>
    <string name="pref_text_marquee">Message text</string>
    <string name="pref_sum_text_marquee">Set message text to display</string>

    <string-array name="pref_color">
        <item name="none">None</item>
        <item name="blue">Blue</item>
        <item name="black">Black</item>
        <item name="white">White</item>
        <item name="red">Red</item>
        <item name="green">Green</item>
        <item name="purple">Purple</item>
        <item name="yellow">Yellow</item>
        <item name="orange">Orange</item>
        <item name="gray">Gray</item>
        <item name="darkblue">Dark Blue</item>
    </string-array>
    <string-array name="pref_color_value">
        <item name="none">#00000000</item>
        <item name="blue">#0000FF</item>
        <item name="black">#000000</item>
        <item name="white">#FFFFFF</item>
        <item name="red">#FF0000</item>
        <item name="green">#00FF00</item>
        <item name="purple">#FF00FF</item>
        <item name="yellow">#FFFF00</item>
        <item name="orange">#FFA500</item>
        <item name="gray">#808080</item>
        <item name="darkblue">#0000A0</item>
    </string-array>

    <string name="pref_text_color">Text color</string>
    <string name="pref_sum_text_color">Set text color</string>
    <string name="pref_text_color_background">Text Background color</string>
    <string name="pref_sum_text_color_background">Set text background color</string>
    <string name="pref_cat_text">Text marquee appearance</string>
    <string name="pref_cat_clock">Clock appearance</string>
    <string name="pref_enable_clock">Display clock</string>
    <string name="pref_clock_text_color">Clock text color</string>
    <string name="pref_sum_enable_clock">Setting clock display</string>
    <string name="pref_sum_clock_text_color">Set clock text color</string>
    <string name="pref_clock_text_color_background">Clock text background color</string>
    <string name="pref_sum_clock_text_color_background">Set clock text background color</string>
    <string name="pref_cat_website">Web Site</string>
    <string name="pref_cat_sum_text">Setting text appearance</string>
    <string name="pref_cat_sum_clock">Setting clock appearance</string>
    <string name="pref_cat_sum_website">Setting web appearance</string>
    <string name="pref_website_url">Website URL</string>

    <string-array name="datasource">
        <item>Web</item>
        <item>Image</item>
    </string-array>
    <string-array name="datasource_value">
        <item>web</item>
        <item>image</item>
    </string-array>

    <string name="pref_datasource">Data Source</string>
    <string name="pref_sum_datasource">Select your default data source</string>
    <string name="pref_sum_website_url">Set your website URL</string>
    <string name="pref_imagepath">Set image path</string>
    <string name="pref_sum_imagepath">Set image path</string>
    <string name="pref_cat_imagepath">Image slide show</string>
    <string name="pref_sum_cat_imagepath">Select image path for slideshow</string>
    <string name="pref_cat_datastore">Data Source</string>
    <string name="alert_no_network_connetion">No network connection, please setup network connection.</string>
    <string name="alert">Alert</string>
    <string name="bnt_setting">Setting...</string>
    <string name="bnt_cancel">Cancel</string>
    <string name="alert_no_file_in_playlist">No file in playlist, please copy image file or select new image directory.</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_version">Version </string>
    <string name="pref_device">Device ID </string>
    <string name="detault_text_marquee">*** This is a example text message, click at clock to set your own text ***</string>
    <string name="pref_help">Online Manual</string>
    <string name="pref_sum_help">Read manual online</string>
    <string name="pref_android_setting">Android Settings...</string>
    <string name="pref_sum_android_setting">Open Android Setting...</string>
    <string name="pref_other">Other</string>

</resources>